Vignette: completed the case study bib: removed .abstract from Slim2018 stability: corrected latex mistake in \eqn data: add doc for maf, propensity and genotypes methods: corrected doc latex mistakes likelihood: corrected doc latex mistakes hmm_data: removed hmm_data file DESCRIPTION: added kableExtra

--- a/vignettes/bibliography.bib
+++ b/vignettes/bibliography.bib
@@ -3,7 +3,7 @@ author = {Slim, Lotfi and Chatelain, Cl{\'{e}}ment and Azencott, Chlo{\'{e}}-Aga
 journal = {bioRxiv},
 month = {jan},
 title = {{Novel Methods for Epistasis Detection in Genome-Wide Association Studies}},
-url = {http://biorxiv.org/content/early/2018/10/14/442749.abstract},
+url = {http://biorxiv.org/content/early/2018/10/14/442749},
 year = {2018}
 }
 
